--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Flip</string>
     <string name="category_error">Algo deu errado</string>
+    <string name="cloud">Cloud</string>
 </resources>
