--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Flip</string>
     <string name="category_error">Algo deu errado</string>
+    <string name="flashcard_error">Algo deu errado</string>
     <string name="cloud">Cloud</string>
 </resources>
