--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Flip</string>
     <string name="category_error">Algo deu errado</string>
     <string name="cloud">Cloud</string>
+    <string name="title_category_list">Categories</string>
+    <string name="title_flash_card_list">Flash cards</string>
+    <string name="title_create_category">Create Category</string>
+    <string name="title_category_image_list">Category Image List</string>
+    <string name="title_create_flash_card">Create Flash Cards</string>
 </resources>
