--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="category_error">Algo deu errado</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="onboarding_step_one">COM O FLIP APP MEMORIZAR FICOU MUITO MAIS FÁCIL</string>
+    <string name="onboarding_step_two">CRIE QUANTOS CARDS QUISER!</string>
+    <string name="onboarding_step_three">COMPLETE SEUS OBJETIVOS!</string>
+
 </resources>
