--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_create_category">Create Category</string>
     <string name="title_category_image_list">Category Image List</string>
     <string name="title_create_flash_card">Create Flash Cards</string>
+    <string name="share">Share</string>
+    <string name="category_empty_message">Nada Aqui</string>
 </resources>
