--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Flip</string>
-    <string name="category_error">Algo deu errado</string>
     <string name="flashcard_error">Algo deu errado</string>
     <string name="cloud">Cloud</string>
     <string name="title_category_list">Categories</string>
@@ -9,5 +8,7 @@
     <string name="title_category_image_list">Category Image List</string>
     <string name="title_create_flash_card">Create Flash Cards</string>
     <string name="share">Share</string>
-    <string name="category_empty_message">Nada Aqui</string>
+    <string name="category_empty_message">Nothing here</string>
+    <string name="category_error_message">Something went wrong</string>
+    <string name="loading">Loading…</string>
 </resources>
