--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="loading">Loading…</string>
     <string name="create_category_success">Success</string>
     <string name="create_category_failed">Failed</string>
+    <string name="category_name">Nome da categoria</string>
+    <string name="select_image">Selecionar Imagem</string>
+    <string name="save">Salvar</string>
 </resources>
