--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="missing_category_image">Seleciona uma imagem</string>
     <string name="create_flashcard_back_empty">Preencha o verso do seu flash card</string>
     <string name="create_flashcard_front_empty">preencha a frente do seu card</string>
+    <string name="flashcard_front_hint">Texto frente</string>
+    <string name="flashcard_back_hint">Texto verso</string>
 </resources>
