--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,8 @@
     <string name="category_name">Nome da categoria</string>
     <string name="select_image">Selecionar Imagem</string>
     <string name="save">Salvar</string>
-    <string name="missing_category_image">Seleciona uma imagem</string>
+    <string name="missing_category_name">Digite o nome da sua categoria</string>
+    <string name="missing_category_image">Selecione uma imagem</string>
     <string name="create_flashcard_back_empty">Preencha o verso do seu flash card</string>
     <string name="create_flashcard_front_empty">preencha a frente do seu card</string>
     <string name="flashcard_front_hint">Texto frente</string>
