--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,18 +15,18 @@
     <string name="delete">Deletar</string>
     <string name="cancel">Cancelar</string>
 
-    <string name="title_category_list">Categories</string>
+    <string name="title_category_list">Categorias</string>
     <string name="title_flash_card_list">Flash cards</string>
-    <string name="title_create_category">Create Category</string>
-    <string name="title_category_image_list">Category Image List</string>
+    <string name="title_create_category">Criar categoria</string>
+    <string name="title_category_image_list">Lista de categoria imagem</string>
     <string name="title_create_flash_card">Create Flash Cards</string>
     <string name="share">Share</string>
-    <string name="category_empty_message">Nothing here</string>
-    <string name="category_error_message">Something went wrong</string>
-    <string name="loading">Loading…</string>
-    <string name="create_category_success">Success</string>
-    <string name="create_category_failed">Failed</string>
-    <string name="create_flashcard_success">Success</string>
+    <string name="category_empty_message">Nada por aqui</string>
+    <string name="category_error_message">Algo deu errado</string>
+    <string name="loading">Carregando…</string>
+    <string name="create_category_success">Successo</string>
+    <string name="create_category_failed">Falhou</string>
+    <string name="create_flashcard_success">Successo</string>
     <string name="category_name">Nome da categoria</string>
     <string name="select_image">Selecionar Imagem</string>
     <string name="save">Salvar</string>
